--- a/self_order.html
+++ b/self_order.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/search_focus.css" type="text/css">
+
 </head>
 
 <body>
@@ -39,40 +41,16 @@
     <import src="module/header.html"></import>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-option">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h4>Order</h4>
-                        <div class="breadcrumb__links">
-                            <a href="./index.html">主頁</a>
-                            <span>建立訂單</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb Section End -->
+    <!-- Self Order Begin 製作中... -->
 
-    <!-- Shop Section Begin -->
-    <!-- Shop Section End -->
+    <!-- Self Order End -->
 
     <!-- Footer Section Begin -->
    <import src="module/footer.html"></import>
     <!-- Footer Section End -->
 
     <!-- Search Begin -->
-    <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
-        </div>
-    </div>
+    <import src="module/search_focus.html"></import>
     <!-- Search End -->
 
     <!-- Js Plugins -->
@@ -86,8 +64,10 @@
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/last_loading.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/jquery-1.11.1.js"></script>
+    <script src="js/search.js"></script>
     <script src="js/logout.js" type="module"></script>
 
 </body>
