--- a/self_information.html
+++ b/self_information.html
@@ -22,9 +22,8 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/txtStyle.css" type="text/css">
     <link rel="stylesheet" href="css/search_focus.css" type="text/css">
-
+    <link rel="stylesheet" href="css/user.css" type="text/css">
 
 </head>
 
@@ -36,57 +35,19 @@
 
     <!-- Offcanvas Menu Begin -->
     <import src="module/offcanvas.html"></import>
+
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
     <import src="module/header.html"></import>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-option">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h4>訂單</h4>
-                        <div class="breadcrumb__links">
-                            <a href="./index.html">主頁</a>
-                            <span>建立訂單/找尋訂單</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb Section End -->
-
-    <!-- Order Create Section Begin -->
-    <import src="module/order_create.html"></import>
-    <!-- Order Create Section End -->
-
-    <!-- Shop Section Begin -->
-    <section class="product spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="filter__controls">
-                        <h2>推薦訂單</h2>
-                        <div class="txt-style-default order-list-update">
-                            <span>最後更新時間: </span>
-                            <span id="last-update-time">NULL</span>
-                        </div>
-                    </ul>
-                </div>
-            </div>
-            <div class="row product__filter">
-            </div>
-        </div>
-    </section>
-    <!-- Shop Section End -->
+    <!-- Self Information Begin 製作中... -->
     
+    <!-- Self Information End -->
 
     <!-- Footer Section Begin -->
-    <import src="module/footer.html"></import>
+   <import src="module/footer.html"></import>
     <!-- Footer Section End -->
 
     <!-- Search Begin -->
@@ -104,12 +65,11 @@
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/last_loading.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/last_loading.js"></script>    
+    <script src="js/jquery-1.11.1.js"></script>
     <script src="js/search.js"></script>
     <script src="js/logout.js" type="module"></script>
-    <script src="js/shop.js" type="module"></script>
-
 </body>
 
 </html>
