--- a/shop.html
+++ b/shop.html
@@ -65,23 +65,7 @@
     <!-- Order Create Section End -->
 
     <!-- Shop Section Begin -->
-    <section class="product spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="filter__controls">
-                        <h2>推薦訂單</h2>
-                        <div class="txt-style-default order-list-update">
-                            <span>最後更新時間: </span>
-                            <span id="last-update-time">NULL</span>
-                        </div>
-                    </ul>
-                </div>
-            </div>
-            <div class="row product__filter">
-            </div>
-        </div>
-    </section>
+    <import src="module/browse_order.html"></import>
     <!-- Shop Section End -->
     
 
@@ -108,7 +92,6 @@
     <script src="js/last_loading.js"></script>    
     <script src="js/search.js"></script>
     <script src="js/logout.js" type="module"></script>
-    <script src="js/shop.js" type="module"></script>
 
 </body>
 
