--- a/index.html
+++ b/index.html
@@ -38,83 +38,8 @@
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
-    <header class="header">
-        <div class="header__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-7">
-                        <div class="header__top__left">
-                            <p>我們的願景是打破邊界，讓每個人都能享受他們最喜歡的產品。</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-5">
-                        <div class="header__top__right">
-                            <div class="header__top__links">
-                                <a id="sign-in" href="login.html">登入</a>
-                                <!--個人選單*f-->
-                                <div style="display: none;" class="account-status user-email">
-                                    <div id="account-email">NULL</div>
-                                    <div class="user-account-dropdown">
-                                        <a class="user-account-dropdown-item" href="self_information.html">個人信息</a>
-                                        <a class="user-account-dropdown-item" href="self_order.html">查詢訂單</a>
-                                        <a class="user-account-dropdown-item" id="sign-out" href="index.html">登出</a>
-                                    </div>
-                                </div>
-                                <!--個人選單*e-->
-                                <a href="#">FAQs</a>
-                            </div>
-                            <div class="header__top__hover">
-                                <span>ZH-HK <i class="arrow_carrot-down"></i></span>
-                                <ul>
-                                    <li>EN-US</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-3">
-                    <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <nav class="header__menu mobile-menu">
-                        <ul>
-                            <!--之後再修class 'active'-->
-                            <li class="" id="index"><a href="./index.html">主頁</a></li>
-                            <li class="" id="shop"><a href="./shop.html">訂單</a></li>
-                            
-                            <li id="travel"><a href="#">Travel</a>
-                                <!--
-                                <ul class="dropdown">
-                                    <li><a href="./about.html">About Us</a></li>
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shopping-cart.html">Shopping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                                -->
-                            </li>
-                            <li class="" id="blog"><a href="./blog.html">博客</a></li>
-                            <li class="" id="contact"><a href="./contact.html">聯絡我們</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-lg-3 col-md-3">
-                    <div class="header__nav__option">
-                        <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                        <a href="#"><img src="img/icon/heart.png" alt=""></a>
-    
-                    </div>
-                </div>
-            </div>
-            <div class="canvas__open"><i class="fa fa-bars"></i></div>
-        </div>
-    </header>    <!-- Header Section End -->
+    <import src="module/header.html"></import>
+    <!-- Header Section End -->
 
     <!-- Hero Section Begin -->
     <section class="hero">
