--- a/module/browse_order.html
+++ b/module/browse_order.html
@@ -3,46 +3,30 @@
         <div class="row">
             <div class="col-lg-12">
                 <ul class="filter__controls">
-                    <h2>推薦訂單</h2>
-                    <div class="txt-style-default order-list-update">
-                        <span>最後更新時間: </span>
-                        <span id="last-update-time">NULL</span>
-                    </div>
+                <h2>推薦訂單</h2>
+                <div id="update-time">最後更新時間: 2023-03-01 12:00</div>
                 </ul>
             </div>
         </div>
         <div class="row product__filter">
             <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals order-item" id="">
                 <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="img/product/product-1.jpg">
+                    <div class="product__item__pic set-bg" data-setbg="img/product/product-1.jpg">
+                        <ul class="product__hover">
+                            <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
+                            <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a></li>
+                            <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+                        </ul>
                     </div>
                     <div class="product__item__text">
-                        <div class="d-flex">
-                            <h6>產品: &nbsp;</h6>
-                            <h6>iphone 14</h6>
-                        </div>
+                        <h6>iphone 14</h6>
                         <a href="#" class="add-cart">詳細</a>
-                        <div class="d-flex">
-                            <h5>剩餘接單時間: &nbsp;</h5>
-                            <h5>5天</h5>
-                        </div>
-                        <div class="d-flex">
-                            <h5>報酬: &nbsp;</h5>
-                            <h5>$22 USD</h5>
-                        </div>
-                        <div class="d-flex">
-                            <h5>購買國家: &nbsp;</h5>
-                            <h5>USA</h5>
-                        </div>
-                        <div class="d-flex">
-                            <h5>提出接單申請人數: &nbsp;</h5>
-                            <h5>0</h5>
-                        </div>
-                        <button class="accept-order-btn">提出接取訂單</button>
+                        <h5>賺了$120港元</h5>
+                        <h5>節省了$220港元</h5>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
