Pending changes exported from your codespace

--- a/create_order_form.html
+++ b/create_order_form.html
@@ -62,7 +62,7 @@
     <!-- Breadcrumb Section End -->
 
     <!-- Shop Section Begin -->
-    <form class="w3l-simple-contact-form2" action="success_create_order.html" method="get" class="signin-form">
+    <form id="form-order-make" action="success_create_order.html" method="get" class="signin-form">
         <div class="section-gap">
             <div class="wrapper">
             <div class="form-inner-cont" id="order-information">
@@ -141,7 +141,7 @@
                     </select>
                 </div>
                 <div class="next-page-btn btn" id="order-detali-back">返回</div>
-                <button type="submit" class="btn">提交</button>
+                <button type="submit" class="btn" id="create-order-submit-btn">提交</button>
             </div>
             </div>
         </div>
@@ -184,6 +184,7 @@
     <script src="js/search.js"></script>
     <script src="js/logout.js" type="module"></script>
     <script src="js/order.js"></script>
+    <!-- <script src="js/create_order.js" type="module"></script> -->
 
 </body>
 
