--- a/success_create_order.html
+++ b/success_create_order.html
@@ -72,15 +72,15 @@
                 <img src="img/success_tick.png"/>
             </div>
             <div class="success-msg-box-item-text">
-                <div class="left-30"><div class="txt-style-small">訂單編號:</div></div>
+                <div class="left-30"><div class="txt-make-order-result">訂單編號:</div></div>
                 <div class="d-flex  right-70"><div class="txt-style-small" id="oc-product-id"></div></div>
             </div>
             <div class="success-msg-box-item-text">
-                <div class="left-30"><div class="txt-style-small">建立時間:</div></div>
+                <div class="left-30"><div class="txt-make-order-result">建立時間:</div></div>
                 <div class="d-flex right-70"><div class="txt-style-small" id="oc-product-date"></div></div>
             </div>
             <div class="msg-bottom">
-                <a href="shop.html" class="return-btn">返回首頁</label>
+                <a href="shop.html" class="return-btn" id="success-msg-box-return-btn">返回首頁</label>
             </div>
         </div>
     </div>
