--- a/testing.html
+++ b/testing.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/search_focus.css" type="text/css">
     <link rel="stylesheet" href="css/create_order_form.css" type="text/css">
+    <link rel="stylesheet" href="css/message.css" type="text/css">
 
     <body>
-        <import src="module/oc_form_01.html"></import>
+        <import src="module/order_loading.html"></import>
     </body>
     <script src="js/last_loading.js"></script>
     <script src="js/jquery-1.11.1.js"></script>
@@ -21,3 +22,5 @@
     <script src="js/order.js"></script>
 
 </html>
+
+
