Pending changes exported from your codespace

--- a/contact.html
+++ b/contact.html
@@ -29,31 +29,8 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-
     <!-- Offcanvas Menu Begin -->
-    <div class="offcanvas-menu-overlay"></div>
-    <div class="offcanvas-menu-wrapper">
-        <div class="offcanvas__option">
-            <div class="offcanvas__links">
-                <a href="login.html">Sign in</a>
-                <a href="#">FAQs</a>
-            </div>
-            <div class="offcanvas__top__hover">
-                <span>ZH-HK <i class="arrow_carrot-down"></i></span>
-                <ul>
-                    <li>EN-US</li>
-                </ul>
-            </div>
-        </div>
-        <div class="offcanvas__nav__option">
-            <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-            <a href="#"><img src="img/icon/heart.png" alt=""></a>
-        </div>
-        <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__text">
-            <p>我們的願景是打破邊界，讓每個人都能享受他們最喜歡的產品。</p>
-        </div>
-    </div>
+    <import src="module/offcanvas.html"></import>
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
@@ -197,6 +174,7 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/last_loading.js"></script>
     <script src="js/logout.js" type="module"></script>
 </body>
 
