--- a/self_information.html
+++ b/self_information.html
@@ -22,9 +22,8 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/txtStyle.css" type="text/css">
     <link rel="stylesheet" href="css/search_focus.css" type="text/css">
-
+    <link rel="stylesheet" href="css/user.css" type="text/css">
 
 </head>
 
@@ -36,58 +35,19 @@
 
     <!-- Offcanvas Menu Begin -->
     <import src="module/offcanvas.html"></import>
+
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
     <import src="module/header.html"></import>
     <!-- Header Section End -->
 
-    <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-option">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb__text">
-                        <h4>完成創建訂單</h4>
-                        <div class="breadcrumb__links">
-                            <a href="./index.html">主頁</a>
-                            <a href="#">建立訂單</a>
-                            <a href="#">訂單資料</a>
-                            <span>完成創建訂單</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Breadcrumb Section End -->
-
-    <!-- Shop Section Begin -->
-    <div  class="fm-contect d-flex justify-content-center align-items-center">
-        <div class="fm-success-msg-box">
-            <div class="success-msg-box-item">
-                <h4 class="txt-style-title">訂單創建成功</h4>
-            </div>
-            <div class="success-msg-box-item">
-                <img src="img/success_tick.png"/>
-            </div>
-            <div class="success-msg-box-item-text">
-                <div class="left-30"><div class="txt-make-order-result">訂單編號:</div></div>
-                <div class="d-flex  right-70"><div class="txt-style-small" id="oc-product-id"></div></div>
-            </div>
-            <div class="success-msg-box-item-text">
-                <div class="left-30"><div class="txt-make-order-result">建立時間:</div></div>
-                <div class="d-flex right-70"><div class="txt-style-small" id="oc-product-date"></div></div>
-            </div>
-            <div class="msg-bottom">
-                <a href="shop.html" class="return-btn" id="success-msg-box-return-btn">返回首頁</label>
-            </div>
-        </div>
-    </div>
-    <!-- Shop Section End -->
+    <!-- Self Information Begin 製作中... -->
+    
+    <!-- Self Information End -->
 
     <!-- Footer Section Begin -->
-    <import src="module/footer.html"></import>
+   <import src="module/footer.html"></import>
     <!-- Footer Section End -->
 
     <!-- Search Begin -->
@@ -95,6 +55,7 @@
     <!-- Search End -->
 
     <!-- Js Plugins -->
+    <script src="js/jquery-1.11.1.js"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
@@ -104,11 +65,11 @@
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/last_loading.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/jquery-1.11.1.js"></script>
     <script src="js/search.js"></script>
     <script src="js/logout.js" type="module"></script>
-    <script src="js/success_create_order.js"></script>
 </body>
 
 </html>
