--- a/shop.html
+++ b/shop.html
@@ -22,13 +22,16 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/txtStyle.css" type="text/css">
     <link rel="stylesheet" href="css/search_focus.css" type="text/css">
+    <link rel="stylesheet" href="css/create_order_form.css" type="text/css">
+    <link rel="stylesheet" href="css/message.css" type="text/css">
+    <link rel="stylesheet" href="css/txtStyle.css" type="text/css">
 
 
 </head>
 
 <body>
+    <import src="module/show_order_detail.html"></import>
     <!-- Page Preloder -->
     <div id="preloder">
         <div class="loader"></div>
@@ -65,7 +68,23 @@
     <!-- Order Create Section End -->
 
     <!-- Shop Section Begin -->
-    <import src="module/browse_order.html"></import>
+    <section class="product spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="filter__controls">
+                        <h2>推薦訂單</h2>
+                        <div class="txt-style-default order-list-update">
+                            <span>最後更新時間: </span>
+                            <span id="last-update-time">NULL</span>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+            <div class="row product__filter">
+            </div>
+        </div>
+    </section>
     <!-- Shop Section End -->
     
 
@@ -76,7 +95,6 @@
     <!-- Search Begin -->
     <import src="module/search_focus.html"></import>
     <!-- Search End -->
-
     <!-- Js Plugins -->
     <script src="js/jquery-1.11.1.js"></script>
     <script src="js/jquery-3.3.1.min.js"></script>
@@ -91,7 +109,9 @@
     <script src="js/main.js"></script>
     <script src="js/last_loading.js"></script>    
     <script src="js/search.js"></script>
+    <script src="js/order_detail.js" type="module"></script>
     <script src="js/logout.js" type="module"></script>
+    <script src="js/shop.js" type="module"></script>
 
 </body>
 
